--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "latest": "^0.2.0",
     "next": "^16.1.6",
+    "nvm": "^0.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
